--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,3 +58,7 @@ path = "91_project/main.rs"
 [[bin]]
 name = "project_2"
 path = "92_project/main.rs"
+
+[[bin]]
+name = "project_3"
+path = "93_project/main.rs"
