add repository to module's Cargo.toml

--- a/13_module/Cargo.toml
+++ b/13_module/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.1"
 edition = "2021"
 description = "Pluralsight demo project"
 license = "Apache-2.0"
+repository = "https://github.com/luispdm/duckair"
 
 [dependencies]
 rand = "0.8.5"
