progressively work on cli app - print cli args

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ unicode-segmentation = "1.10.1"
 [workspace]
 members = [
     "13_module",
-    "99_rust_book/11_tests"
+    "99_rust_book/11_tests",
+    "99_rust_book/12_cli_app"
 ]
 
 [[bin]]
