--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,3 +83,7 @@ path = "99_rust_book/10_1_traits/main.rs"
 [[bin]]
 name = "b_lifetimes"
 path = "99_rust_book/10_3_lifetimes/main.rs"
+
+[[bin]]
+name = "b_closures"
+path = "99_rust_book/13_1_closures/main.rs"
