--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,3 +87,7 @@ path = "99_rust_book/10_3_lifetimes/main.rs"
 [[bin]]
 name = "b_closures"
 path = "99_rust_book/13_1_closures/main.rs"
+
+[[bin]]
+name = "b_iterators"
+path = "99_rust_book/13_2_iterators/main.rs"
