--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ unicode-segmentation = "1.10.1"
 members = [
     "13_module",
     "99_rust_book/11_tests",
-    "99_rust_book/12_cli_app"
+    "99_rust_book/12_cli_app",
+    "99_rust_book/13_3_cli_app_iterators"
 ]
 
 [[bin]]
