start box smart pointers

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -103,3 +103,7 @@ path = "99_rust_book/13_1_closures/main.rs"
 [[bin]]
 name = "b_iterators"
 path = "99_rust_book/13_2_iterators/main.rs"
+
+[[bin]]
+name = "b_box"
+path = "99_rust_book/15_1_box_sp/main.rs"
