--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,3 +111,7 @@ path = "99_rust_book/15_1_box_smart_pointers/main.rs"
 [[bin]]
 name = "b_deref"
 path = "99_rust_book/15_2_deref_trait/main.rs"
+
+[[bin]]
+name = "b_drop"
+path = "99_rust_book/15_3_drop_trait/main.rs"
