--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,3 +115,7 @@ path = "99_rust_book/15_2_deref_trait/main.rs"
 [[bin]]
 name = "b_drop"
 path = "99_rust_book/15_3_drop_trait/main.rs"
+
+[[bin]]
+name = "b_rc"
+path = "99_rust_book/15_4_reference_counting/main.rs"
