--- a/Cargo.toml
+++ b/Cargo.toml
@@ -123,3 +123,7 @@ path = "99_rust_book/15_4_reference_counting/main.rs"
 [[bin]]
 name = "b_refcell"
 path = "99_rust_book/15_5_interior_mutability/main.rs"
+
+[[bin]]
+name = "b_cycles"
+path = "99_rust_book/15_6_reference_cycles/main.rs"
