threads mutex and arc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -129,5 +129,9 @@ name = "b_cycles"
 path = "99_rust_book/15_6_reference_cycles/main.rs"
 
 [[bin]]
-name = "b_threads_2"
+name = "b_threads_msgs"
 path = "99_rust_book/16_2_threads_messages/main.rs"
+
+[[bin]]
+name = "b_threads_state"
+path = "99_rust_book/16_3_threads_state/main.rs"
