--- a/Cargo.toml
+++ b/Cargo.toml
@@ -145,3 +145,7 @@ path = "99_rust_book/17_1_oo_programming/main.rs"
 [[bin]]
 name = "b_patterns"
 path = "99_rust_book/18_1_pattern_matching/main.rs"
+
+[[bin]]
+name = "b_pattern_syntax"
+path = "99_rust_book/18_2_pattern_syntax/main.rs"
