--- a/Cargo.toml
+++ b/Cargo.toml
@@ -153,3 +153,7 @@ path = "99_rust_book/18_2_pattern_syntax/main.rs"
 [[bin]]
 name = "b_unsafe"
 path = "99_rust_book/19_1_unsafe/main.rs"
+
+[[bin]]
+name = "b_advanced_traits"
+path = "99_rust_book/19_2_advanced_traits/main.rs"
