--- a/Cargo.toml
+++ b/Cargo.toml
@@ -155,5 +155,5 @@ name = "b_unsafe"
 path = "99_rust_book/19_1_unsafe/main.rs"
 
 [[bin]]
-name = "b_advanced_traits"
+name = "b_a_traits"
 path = "99_rust_book/19_2_advanced_traits/main.rs"
