--- a/Cargo.toml
+++ b/Cargo.toml
@@ -157,3 +157,7 @@ path = "99_rust_book/19_1_unsafe/main.rs"
 [[bin]]
 name = "b_a_traits"
 path = "99_rust_book/19_2_advanced_traits/main.rs"
+
+[[bin]]
+name = "b_a_types"
+path = "99_rust_book/19_3_advanced_types/main.rs"
