better macro comment

--- a/99_rust_book/19_5_macros/hello_macro/hello_macro_derive/Cargo.toml
+++ b/99_rust_book/19_5_macros/hello_macro/hello_macro_derive/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-# procedural macro crates need to be defined inside their own crate
+# procedural macros need to be defined inside their own crate
 name = "hello_macro_derive" # the convention with custom-derived macro crates is to name them: "$PARENT_CRATE_derive"
 version = "0.1.0"
 edition = "2021"
